kubernetes/struts/dev/struts-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_redirect https://dev.narrative.org https://dev-struts.narrative.org;
      sub_filter_once off;
      sub_filter "https://dev.narrative.org/" "https://dev-struts.narrative.org/";
      sub_filter "https://dev.narrative.org" "https://dev-struts.narrative.org";
    nginx.ingress.kubernetes.io/proxy-redirect-from: https://dev.narrative.org/
    nginx.ingress.kubernetes.io/proxy-redirect-to: https://dev-struts.narrative.org/
    nginx.ingress.kubernetes.io/upstream-vhost: dev.narrative.org
    kubernetes.io/ingress.class: "nginx"
  name: struts
  namespace: dev
spec:
  rules:
  - host: dev-struts.narrative.org
    http:
      paths:
      - backend:
          serviceName: narrative-core
          servicePort: 8080
  tls:
  - secretName: cloudflare-wildcard-narrative-org
    hosts:
      - dev-struts.narrative.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: oauth-dev-struts
  namespace: default
spec:
  rules:
  - host: dev-struts.narrative.org
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-org
    hosts:
      - dev-struts.narrative.org
